force-app/main/default/objects/AccountEventOut__e/AccountEventOut__e.object-meta.xml
<CustomObject>
    <description>Event which is emitted when an Account is created or changed.</description>
    <label>AccountEventOut</label>
    <pluralLabel>AccountEventsOut</pluralLabel>
</CustomObject>