force-app/main/default/objects/AccountEventOut__e/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>The textual version of the account Id</description>
    <label>Account ID</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>