force-app/main/default/objects/AccountEventOut__e/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>