force-app/main/default/objects/AccountEventOut__e/fields/Deliver_Address__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Address__c</fullName>
    <description>The Delivery Address</description>
    <label>Deliver Address</label>
    <length>75</length>
    <type>Text</type>
</CustomField>