force-app/main/default/objects/AccountEventOut__e/fields/Routing__c.field-meta.xml
<CustomField>
    <fullName>Routing__c</fullName>
    <description>This field indicates to event listeners which route to take base on flags in the triggering Account</description>
    <label>Routing</label>
    <length>25</length>
    <type>Text</type>
</CustomField>