force-app/main/default/objects/AccountEventOut__e/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>